// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Billing render Billing component set to show 1`] = `
<DocumentFragment>
  <div
    class="Sidebar Billing Sidebar--Show"
  >
    <div
      class="Header"
    >
      <h1
        class="Header__Title"
      >
        TestSite
      </h1>
      <button
        aria-label="Close"
        class="Header__Times"
      >
        <svg
          aria-labelledby="button"
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
              fill="black"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="IndexGuest__Summary"
    >
      <button
        class="IndexGuest__Summary__Btn"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.5858 12L6.29289 3.70711C5.90237 3.31658 5.90237 2.68342 6.29289 2.29289C6.68342 1.90237 7.31658 1.90237 7.70711 2.29289L16.7071 11.2929C17.0976 11.6834 17.0976 12.3166 16.7071 12.7071L7.70711 21.7071C7.31658 22.0976 6.68342 22.0976 6.29289 21.7071C5.90237 21.3166 5.90237 20.6834 6.29289 20.2929L14.5858 12Z"
            fill="black"
          />
        </svg>
        <h2>
          Summary
        </h2>
        <div
          class="stx-price stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            CA$262.00
          </p>
        </div>
      </button>
    </div>
    <div
      class="Billing__Payment"
    >
      <h2
        class="IndexGuest__Title"
      >
        Payment method
      </h2>
      <div
        class="Payment"
      >
        <section
          class="hidden FieldSet FieldSet--PaymentMethod"
        >
          <div
            class="FieldSet__Content"
          >
            <iframe
              data-bold-pigi-iframe="true"
              src="test.url"
              title="payments"
            />
          </div>
          <div
            class="FieldSet__Content"
          >
            <div
              class="DiscountLink"
            >
              <button
                aria-label="add discount code"
              >
                Discount code
              </button>
            </div>
          </div>
          <div
            class="FieldSet__Content"
          >
            <section
              class="FieldSet FieldSet--BillingAddress"
            >
              <div
                class="FieldSet__Header"
              >
                <h3
                  class="Billing__Title"
                >
                  Billing address
                </h3>
              </div>
              <div
                class="FieldSet__Content"
              >
                <div
                  class="stx-field stx-checkbox-field__field RadioButton"
                >
                  <div
                    class="stx-checkbox-field__div"
                  >
                    <span
                      class="stx-checkbox stx-checkbox--is-checked stx-checkbox-field__checkbox"
                    >
                      <input
                        checked=""
                        class="stx-checkbox__input"
                        id="stxField1"
                        name="billing-address"
                        type="checkbox"
                        value="SAME_AS_SHIPPING_ADDRESS"
                      />
                      <span
                        class="stx-checkbox__mount"
                      />
                    </span>
                    <label
                      class="stx-checkbox-field__label"
                      for="stxField1"
                    >
                      Same as shipping address
                    </label>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </section>
      </div>
    </div>
    <div
      class="IndexGuest-__Footer"
    >
      <div
        class="CheckoutButton__Container"
      >
        <button
          aria-busy="false"
          aria-disabled="false"
          class="stx-button CheckoutButton Billing__Checkout__Btn"
        >
          <span
            class="stx-button__text"
          >
            Complete Order
          </span>
          <span
            class="stx-loading-spinner stx-button__spinner"
          />
        </button>
      </div>
      <div
        class="IndexGuest__Footer--login"
      >
        <button
          class="link-btn"
          type="button"
        >
          Back to shipping
        </button>
      </div>
      <div
        class="IndexGuest__Rights"
      >
        All right reserved TestSite
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Billing render Billing component with another component set to show 1`] = `
<DocumentFragment>
  <div
    class="Sidebar Billing Sidebar--Hide"
  >
    <div
      class="Header"
    >
      <h1
        class="Header__Title"
      >
        TestSite
      </h1>
      <button
        aria-label="Close"
        class="Header__Times"
      >
        <svg
          aria-labelledby="button"
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
              fill="black"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="IndexGuest__Summary"
    >
      <button
        class="IndexGuest__Summary__Btn"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.5858 12L6.29289 3.70711C5.90237 3.31658 5.90237 2.68342 6.29289 2.29289C6.68342 1.90237 7.31658 1.90237 7.70711 2.29289L16.7071 11.2929C17.0976 11.6834 17.0976 12.3166 16.7071 12.7071L7.70711 21.7071C7.31658 22.0976 6.68342 22.0976 6.29289 21.7071C5.90237 21.3166 5.90237 20.6834 6.29289 20.2929L14.5858 12Z"
            fill="black"
          />
        </svg>
        <h2>
          Summary
        </h2>
        <div
          class="stx-price stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            CA$262.00
          </p>
        </div>
      </button>
    </div>
    <div
      class="Billing__Payment"
    >
      <h2
        class="IndexGuest__Title"
      >
        Payment method
      </h2>
      <div
        class="Payment"
      >
        <section
          class="hidden FieldSet FieldSet--PaymentMethod"
        >
          <div
            class="FieldSet__Content"
          >
            <iframe
              data-bold-pigi-iframe="true"
              src="test.url"
              title="payments"
            />
          </div>
          <div
            class="FieldSet__Content"
          >
            <div
              class="DiscountLink"
            >
              <button
                aria-label="add discount code"
              >
                Discount code
              </button>
            </div>
          </div>
          <div
            class="FieldSet__Content"
          >
            <section
              class="FieldSet FieldSet--BillingAddress"
            >
              <div
                class="FieldSet__Header"
              >
                <h3
                  class="Billing__Title"
                >
                  Billing address
                </h3>
              </div>
              <div
                class="FieldSet__Content"
              >
                <div
                  class="stx-field stx-checkbox-field__field RadioButton"
                >
                  <div
                    class="stx-checkbox-field__div"
                  >
                    <span
                      class="stx-checkbox stx-checkbox--is-checked stx-checkbox-field__checkbox"
                    >
                      <input
                        checked=""
                        class="stx-checkbox__input"
                        id="stxField3"
                        name="billing-address"
                        type="checkbox"
                        value="SAME_AS_SHIPPING_ADDRESS"
                      />
                      <span
                        class="stx-checkbox__mount"
                      />
                    </span>
                    <label
                      class="stx-checkbox-field__label"
                      for="stxField3"
                    >
                      Same as shipping address
                    </label>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </section>
      </div>
    </div>
    <div
      class="IndexGuest-__Footer"
    >
      <div
        class="CheckoutButton__Container"
      >
        <button
          aria-busy="false"
          aria-disabled="false"
          class="stx-button CheckoutButton Billing__Checkout__Btn"
        >
          <span
            class="stx-button__text"
          >
            Complete Order
          </span>
          <span
            class="stx-loading-spinner stx-button__spinner"
          />
        </button>
      </div>
      <div
        class="IndexGuest__Footer--login"
      >
        <button
          class="link-btn"
          type="button"
        >
          Back to shipping
        </button>
      </div>
      <div
        class="IndexGuest__Rights"
      >
        All right reserved TestSite
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Billing render Billing component with the summary set to show 1`] = `
<DocumentFragment>
  <div
    class="Sidebar Billing IndexPage--Hide"
  >
    <div
      class="Header"
    >
      <h1
        class="Header__Title"
      >
        TestSite
      </h1>
      <button
        aria-label="Close"
        class="Header__Times"
      >
        <svg
          aria-labelledby="button"
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
              fill="black"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
              fill="black"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="IndexGuest__Summary"
    >
      <button
        class="IndexGuest__Summary__Btn"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.5858 12L6.29289 3.70711C5.90237 3.31658 5.90237 2.68342 6.29289 2.29289C6.68342 1.90237 7.31658 1.90237 7.70711 2.29289L16.7071 11.2929C17.0976 11.6834 17.0976 12.3166 16.7071 12.7071L7.70711 21.7071C7.31658 22.0976 6.68342 22.0976 6.29289 21.7071C5.90237 21.3166 5.90237 20.6834 6.29289 20.2929L14.5858 12Z"
            fill="black"
          />
        </svg>
        <h2>
          Summary
        </h2>
        <div
          class="stx-price stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            CA$262.00
          </p>
        </div>
      </button>
    </div>
    <div
      class="Billing__Payment"
    >
      <h2
        class="IndexGuest__Title"
      >
        Payment method
      </h2>
      <div
        class="Payment"
      >
        <section
          class="hidden FieldSet FieldSet--PaymentMethod"
        >
          <div
            class="FieldSet__Content"
          >
            <iframe
              data-bold-pigi-iframe="true"
              src="test.url"
              title="payments"
            />
          </div>
          <div
            class="FieldSet__Content"
          >
            <div
              class="DiscountLink"
            >
              <button
                aria-label="add discount code"
              >
                Discount code
              </button>
            </div>
          </div>
          <div
            class="FieldSet__Content"
          >
            <section
              class="FieldSet FieldSet--BillingAddress"
            >
              <div
                class="FieldSet__Header"
              >
                <h3
                  class="Billing__Title"
                >
                  Billing address
                </h3>
              </div>
              <div
                class="FieldSet__Content"
              >
                <div
                  class="stx-field stx-checkbox-field__field RadioButton"
                >
                  <div
                    class="stx-checkbox-field__div"
                  >
                    <span
                      class="stx-checkbox stx-checkbox--is-checked stx-checkbox-field__checkbox"
                    >
                      <input
                        checked=""
                        class="stx-checkbox__input"
                        id="stxField2"
                        name="billing-address"
                        type="checkbox"
                        value="SAME_AS_SHIPPING_ADDRESS"
                      />
                      <span
                        class="stx-checkbox__mount"
                      />
                    </span>
                    <label
                      class="stx-checkbox-field__label"
                      for="stxField2"
                    >
                      Same as shipping address
                    </label>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </section>
      </div>
    </div>
    <div
      class="IndexGuest-__Footer"
    >
      <div
        class="CheckoutButton__Container"
      >
        <button
          aria-busy="false"
          aria-disabled="false"
          class="stx-button CheckoutButton Billing__Checkout__Btn"
        >
          <span
            class="stx-button__text"
          >
            Complete Order
          </span>
          <span
            class="stx-loading-spinner stx-button__spinner"
          />
        </button>
      </div>
      <div
        class="IndexGuest__Footer--login"
      >
        <button
          class="link-btn"
          type="button"
        >
          Back to shipping
        </button>
      </div>
      <div
        class="IndexGuest__Rights"
      >
        All right reserved TestSite
      </div>
    </div>
  </div>
</DocumentFragment>
`;
